<resources>
    <string name="app_name">Plataforma CRPG</string>
    <string name="action_settings">Opções</string>
    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>
    <string name="horizontal_timeline_w_padding">Horizontal Timeline With Line Padding</string>
    <string name="vertical_timeline_w_padding">Vertical Timeline With Line Padding</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="marker">Marker</string>
    <string name="elevation">Size</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="marker_drawable_message">You can also change the marker drawable in attributes.</string>
    <string name="marker_in_center">In center</string>
    <string name="line">Line</string>
    <string name="start_line_color">Start Line Color</string>
    <string name="end_line_color">End Line Color</string>
    <string name="width">Width</string>
    <string name="type">Type</string>
    <string name="dash_length">Dash Length</string>
    <string name="dash_gap">Dash Gap</string>
    <string name="line_padding">Line Padding</string>
    <string name="timeline_attributes">Timeline Attributes</string>
    <string name="style">Style</string>
    <string name="example">Example</string>
    <string name="activity_example_label">Example</string>
    <string name="apply">Apply</string>
    <string name="top_padding">Top Padding</string>
    <string name="bottom_padding">Bottom Padding</string>
    <string name="left_padding">Left Padding</string>
    <string name="right_padding">Right Padding</string>
    <string name="marker_padding_message">When orientation is vertical then only top and bottom padding is applied, orientation is horizontal then only left and right padding is applied.</string>
    <string name="date_pick">Escolher dia </string>
    <string name="escolher"> Escolher </string>
    <string name="title_agenda"> AGENDA </string>
    <string name="title_lembretes"> LEMBRETES </string>
    <string name="title_meditacao"> MEDITACAO </string>
    <string name="title_notas"> NOTAS </string>
    <string name="escolher_data">ESCOLHER A DATA</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tomar_medicacao">Tomar medicação</string>
    <string name="apanhar_bus">Apanhar bus do CRPG</string>
    <string name="escolher_almoco">Escolher almoço</string>
    <string name="personalizado">Personalizado</string>
    <string name="todos_os_dias">Todos os dias</string>
    <string name="hoje">Hoje</string>
    <string name="amanha">Amanhã</string>
    <string name="green_check">✔</string>
    <string name="ok">OK</string>
    <string name="criado_c_sucesso">Lembrete criado com sucesso!</string>
    <string name="meal_criado_c_sucesso">Refeição criada com sucesso!</string>
    <string name="som">SOM</string>
    <string name="vibrar">VIBRAR</string>
    <string name="aviso_campos_obrigatorios">AVISO: CAMPOS OBRIGATÓRIOS EM FALTA.</string>
    <string name="adicionar_lembrete">Adicione lembretes para não se esquecer do que é realmente importante!</string>
    <string name="clique_icone_lapis">Clique no icone com o lapis para criar um novo lembrete</string>
    <string name="selecionar_dias">Selecione dias da semana:</string>
    <string name="escolha_a_sua_refeicao">Escolha a sua refeição:</string>
    <string name="opcao_carne">Opção Carne</string>
    <string name="opcao_peixe">Opção Peixe</string>
    <string name="opcao_dieta">Opção Dieta</string>
    <string name="opcao_veg">Opção Vegetariana</string>
    <string name="escolha_local">Escolha a paragem do transporte:</string>
    <string name="transportes">TRANSPORTES</string>
    <string name="motorista">Motorista:</string>
    <string name="ligar_ao_motorista">CONTACTAR MOTORISTA</string>
    <string name="ver_transportes_publicos">TRANSPORTES PÚBLICOS </string>
    <string name="regressar">REGRESSAR </string>
    <string name="escolha_linha">SELECIONE UMA LINHA:</string>
    <string name="ver_horarios">VER HORÁRIOS</string>
    <string name="title_activity_record_audio">RecordAudioActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nova_nota_de_texto">NOVA NOTA DE TEXTO</string>
    <string name="titulo_da_nota">Título da nota:</string>
    <string name="conteudo">Conteúdo:</string>
    <string name="nova_nota_de_voz">NOVA NOTA DE VOZ</string>
    <string name="notas">NOTAS</string>
    <string name="informacao">INFORMAÇÃO</string>
    <string name="motorista_a">JOÃO</string>
    <string name="contacto_a">901234567</string>
    <string name="motoristas">MOTORISTAS</string>
    <string name="motorista_b">ANA</string>
    <string name="contacto_b">977654321</string>
    <string name="motorista_c">RUI</string>
    <string name="contacto_c">941112223</string>
    <string name="selecionar">SELECIONAR</string>
    <string name="selecionar_data">SELECIONE UM DIA:</string>
    <string name="selecionar_data_hint">MOVA OS CARTÕES LARANJA PARA A ESQUERDA/DIREITA PARA VER MAIS DIAS!</string>
    <string name="nenhuma_refeicao_selecionada">NENHUMA REFEIÇÃO SELECIONADA!</string>
    <string name="hora_minutos_invalido">Valor de Hora ou Minutos inválido!</string>
    <string name="campos_obrigatorios_falta">Campos obrigatórios em falta.</string>
    <string name="about">ABOUT</string>
    <string name="app_uses_libraries">This app uses the following libraries:</string>
    <string name="meditacao">MEDITAÇÃO</string>
    <string name="como_gostaria_de_se_sentir">Como gostaria de se sentir?</string>
    <string name="querido">QUERIDO</string>
    <string name="mente_s">MENTE SÃ</string>
    <string name="confiante">CONFIANTE</string>
    <string name="com_sono">COM SONO</string>
    <string name="feliz">FELIZ</string>
    <string name="relaxado">RELAXADO</string>
    <string name="valor_horas_minutos_falta">Valor das horas ou minutos em falta!</string>
    <string name="refeicao_escolhida_com_sucesso">Refeição escolhida com sucesso!</string>
    <string name="nenhum_dia_selecionado_warning">Nenhum dia selecionado! Clique num dia para o selecionar.</string>
    <string name="nenhum_dia_selecionado_msg">Nenhum dia selecionado</string>
    <string name="clock_separator">:</string>
    <string name="horas">horas</string>
    <string name="minutos">minutos</string>
    <string name="consultar_horarios">CONSULTAR HORÁRIOS</string>
    <string name="photo_viewer_hint">Um clique para fechar foto, duplo clique para fazer zoom!</string>
    <string name="som_ou_vibracao">Som e/ou vibração</string>
    <string name="lembrar_de">Lembrar-me de…</string>
    <string name="insira_o_nome_do_seu_lembrete">Insira o nome do seu lembrete:</string>
    <string name="dados_em_falta">DADOS EM FALTA! INTRODUZA TÍTULO E CONTEÚDO</string>
    <string name="titulo_voz_em_falta">DADOS EM FALTA! INTRODUZA TÍTULO E NOTA DE VOZ</string>
    <string name="selecione_o_tranporte">SELECIONE O TRANPORTE:</string>
    <string name="camioneta_do_crpg">CAMIONETA DO CRPG</string>
    <string name="transporte_personalizado">TRANSPORTE PERSONALIZADO</string>
    <string name="transportes_publicos">TRANSPORTES PÚBLICOS</string>
    <string name="carregar_imagem">CARREGAR IMAGEM</string>
    <string name="guardar_nota_de_texto">Guardar nota de texto</string>
    <string name="selecionar_mente_sa">Selecionar Mente Sã</string>
    <string name="selecionar_querido">Selecionar Querido</string>
    <string name="selecionar_confiante">Selecionar Confiante</string>
    <string name="selecionar_com_sono">Selecionar Com Sono</string>
    <string name="selecionar_feliz">Selecionar Feliz</string>
    <string name="selecionar_relaxado">Selecionar Relaxado</string>
    <string name="regressar_ecra_escolha_transportes">Regressar ao ecrã de escolha dos transportes</string>
    <string name="selecionar_dia">Selecionar dia</string>
    <string name="em_que_dia">Em que dia?</string>
    <string name="a_que_horas">A que horas?</string>
    <string name="ambos">AMBOS</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="q">Q</string>
    <string name="d">D</string>
    <string name="imagem_associada_estado_selecionado">Imagem associada ao estado selecionado</string>
    <string name="retroceder_reproducao">Retroceder na reprodução</string>
    <string name="reproduzir_faixa">Reproduzir faixa de meditação</string>
    <string name="pausar_reproducao">Pausar reprodução</string>
    <string name="avancar_reproducao">Avançar na reprodução</string>
    <string name="autocarro_stcp">Foto Autocarro STCP</string>
    <string name="camioneta_crpg">Camioneta CRPG</string>
    <string name="meu_horario">O meu horário</string>
    <string name="bloco_de_notas">Bloco de notas</string>
    <string name="fotografia_associada_nota_texto">Fotografia associada a nota de texto</string>
    <string name="criar_lembrete">CRIAR LEMBRETE</string>
    <string name="iniciar_gravacao">Iniciar Gravação</string>
    <string name="imagem_associada_a_nota_de_voz">Imagem associada a nota de voz</string>
    <string name="reproduzir_som">Reproduzir som</string>
    <string name="parar_gravacao">Parar gravação</string>
    <string name="para">Para</string>
    <string name="imagem_ilustrativa_do_item_da_agenda">Imagem ilustrativa do item da agenda</string>
    <string name="imagem_ilustrativa_da_nota">Imagem ilustrativa da nota</string>
    <string name="apagar_nota">Apagar nota</string>
    <string name="imagem_ilutrativa_de_prato_de_carne">Imagem ilutrativa de prato de carne</string>
    <string name="imagem_ilustrativa_de_prato_de_peixe">Imagem ilustrativa de prato de peixe</string>
    <string name="imagem_ilustrativa_de_prato_de_dieta">Imagem ilustrativa de prato de dieta</string>
    <string name="imagem_ilustrativa_de_prato_vegetariano">Imagem ilustrativa de prato vegetariano</string>
    <string name="opcao_apenas_som_selecionada">Opção apenas som selecionada</string>
    <string name="opcao_apenas_vibracao_selecionada">Opção apenas vibração selecionada</string>
    <string name="opcao_som_vibracao_selecionada">Opção som e vibração selecionada</string>
    <string name="clique_mais_info">CLIQUE PARA MAIS INFORMAÇÕES</string>
    <string name="carrinhas_do_crpg">CARRINHAS DO CRPG</string>
    <string name="lembrete">Lembrete</string>
    <string name="relogio">Relógio</string>
    <string name="telemovel">Telemóvel</string>
    <string name="agenda">Agenda</string>
    <string name="criar_nota_de_texto">CRIAR NOTA DE TEXTO</string>
    <string name="criar_nota_de_voz">CRIAR NOTA DE VOZ</string>
    <string name="personalizado_para_mim">O MEU HORÁRIO</string>
    <string name="notas_minusculo">Notas</string>
    <string name="meu_lembrete">O MEU LEMBRETE</string>
    <string name="apanhar_transporte">APANHAR TRANSPORTE</string>
    <string name="escolher_dias">ESCOLHER DIAS</string>
    <string-array name="line_type">
        <item>Normal</item>
        <item>Dashed</item>
    </string-array>
    <string-array name="location_array">
        <item>Porto</item>
        <item>Casa</item>
        <item>Gaia</item>
    </string-array>
</resources>