<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_weight=".70"
  android:background="@color/white_93"
  android:orientation="vertical"
  android:paddingTop="5dp"
  android:paddingBottom="5dp"
  android:paddingLeft="50dp"
  android:paddingRight="50dp">

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_button_round_top"
    android:textColor="@color/white_93"
    android:text="@string/tomar_medicacao" />

  <View android:id="@+id/lembrar_separator1"
      android:background="@color/white_93"
      android:layout_width = "fill_parent"
      android:layout_height="1dip" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_blue_100"
    android:textColor="@color/white_93"
    android:text="@string/apanhar_bus" />

  <View android:id="@+id/lembrar_separator2"
      android:background="@color/white_93"
      android:layout_width = "fill_parent"
      android:layout_height="1dip" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_blue_100"
    android:textColor="@color/white_93"
    android:text="@string/escolher_almoco" />

  <View android:id="@+id/lembrar_separator3"
      android:background="@color/white_93"
      android:layout_width = "fill_parent"
      android:layout_height="1dip" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/button3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_button_round_bottom"
    android:textColor="@color/white_93"
    android:text="@string/personalizado" />
</LinearLayout>
