<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transports.CustomTransportsFragment"
    android:background="@color/white">


    <TextView
        android:id="@+id/ver_horarios"
        android:layout_width="382dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/informacao"
        android:textAlignment="center"
        android:textColor="@color/md_blue_100"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />


    <FrameLayout
        android:layout_width="399dp"
        android:layout_height="253dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ver_horarios">

        <TextView
            android:id="@+id/custom_transports_text"
            android:layout_width="394dp"
            android:layout_height="136dp" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="378dp"
        android:layout_height="292dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="265dp">

        <TextView
            android:id="@+id/text_motoristas"
            android:layout_width="382dp"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/motoristas"
            android:textAlignment="center"
            android:textColor="@color/md_blue_100"
            android:textSize="30sp" />

        <FrameLayout
            android:id="@+id/frame_motorista_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/text_to_from_1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/motorista_a"
                android:textAlignment="gravity"
                android:textColor="@color/md_blue_100"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_to_from_2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|center_vertical"
                android:gravity="center_vertical"
                android:text="@string/contacto_a"
                android:textAlignment="gravity"
                android:textColor="@color/md_blue_100"
                android:textSize="25sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_motorista_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@id/frame_de_para_1">

            <TextView
                android:id="@+id/text_to_from_3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/motorista_b"
                android:textAlignment="gravity"
                android:textColor="@color/md_blue_100"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_to_from_4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|center_vertical"
                android:gravity="center_vertical"
                android:text="@string/contacto_b"
                android:textAlignment="gravity"
                android:textColor="@color/md_blue_100"
                android:textSize="25sp" />

        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/button_return_transports"
        android:layout_width="327dp"
        android:layout_height="63dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="76dp"
        android:text="@string/regressar"
        android:textColor="@color/md_blue_100"
        android:textSize="25sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="@color/md_blue_100"
        app:strokeColor="@color/md_blue_100"
        app:strokeWidth="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

